src/org/javaavc/gen/swscale/LibswscaleLibrary.java

	/**
	 * @param dstRange flag indicating the while-black range of the output (1=jpeg / 0=mpeg)<br>
	 * @param srcRange flag indicating the while-black range of the input (1=jpeg / 0=mpeg)<br>
	 * @param table the yuv2rgb coefficients describing the output yuv space, normally ff_yuv2rgb_coeffs[x]<br>
	 * @param inv_table the yuv2rgb coefficients describing the input yuv space, normally ff_yuv2rgb_coeffs[x]<br>
	 * @param brightness 16.16 fixed point brightness correction<br>
	 * @param contrast 16.16 fixed point contrast correction<br>
	 * @param saturation 16.16 fixed point saturation correction<br>
	 * @return -1 if not supported<br>
	 * Original signature : <code>int sws_setColorspaceDetails(SwsContext*, const int[4], int, const int[4], int, int, int, int)</code><br>
	 * @deprecated use the safer methods {@link #sws_setColorspaceDetails(org.javaavc.gen.swscale.LibswscaleLibrary.SwsContext, java.nio.IntBuffer, int, java.nio.IntBuffer, int, int, int, int)} and {@link #sws_setColorspaceDetails(org.javaavc.gen.swscale.LibswscaleLibrary.SwsContext, com.sun.jna.ptr.IntByReference, int, com.sun.jna.ptr.IntByReference, int, int, int, int)} instead
	 */
	@Deprecated 
	int sws_setColorspaceDetails(LibswscaleLibrary.SwsContext c, IntByReference inv_table, int srcRange, IntByReference table, int dstRange, int brightness, int contrast, int saturation);
	/**
	 * @param dstRange flag indicating the while-black range of the output (1=jpeg / 0=mpeg)<br>
	 * @param srcRange flag indicating the while-black range of the input (1=jpeg / 0=mpeg)<br>
	 * @param table the yuv2rgb coefficients describing the output yuv space, normally ff_yuv2rgb_coeffs[x]<br>
	 * @param inv_table the yuv2rgb coefficients describing the input yuv space, normally ff_yuv2rgb_coeffs[x]<br>
	 * @param brightness 16.16 fixed point brightness correction<br>
	 * @param contrast 16.16 fixed point contrast correction<br>
	 * @param saturation 16.16 fixed point saturation correction<br>
	 * @return -1 if not supported<br>
	 * Original signature : <code>int sws_setColorspaceDetails(SwsContext*, const int[4], int, const int[4], int, int, int, int)</code>
	 */
	int sws_setColorspaceDetails(LibswscaleLibrary.SwsContext c, IntBuffer inv_table, int srcRange, IntBuffer table, int dstRange, int brightness, int contrast, int saturation);
	/**
	 * @return -1 if not supported<br>
	 * Original signature : <code>int sws_getColorspaceDetails(SwsContext*, int**, int*, int**, int*, int*, int*, int*)</code><br>
	 * @deprecated use the safer methods {@link #sws_getColorspaceDetails(org.javaavc.gen.swscale.LibswscaleLibrary.SwsContext, com.sun.jna.ptr.PointerByReference, java.nio.IntBuffer, com.sun.jna.ptr.PointerByReference, java.nio.IntBuffer, java.nio.IntBuffer, java.nio.IntBuffer, java.nio.IntBuffer)} and {@link #sws_getColorspaceDetails(org.javaavc.gen.swscale.LibswscaleLibrary.SwsContext, com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	int sws_getColorspaceDetails(LibswscaleLibrary.SwsContext c, PointerByReference inv_table, IntByReference srcRange, PointerByReference table, IntByReference dstRange, IntByReference brightness, IntByReference contrast, IntByReference saturation);
	/**
	 * @return -1 if not supported<br>
	 * Original signature : <code>int sws_getColorspaceDetails(SwsContext*, int**, int*, int**, int*, int*, int*, int*)</code>
	 */
	int sws_getColorspaceDetails(LibswscaleLibrary.SwsContext c, PointerByReference inv_table, IntBuffer srcRange, PointerByReference table, IntBuffer dstRange, IntBuffer brightness, IntBuffer contrast, IntBuffer saturation);
	/**
	 * Allocate and return an uninitialized vector with length coefficients.<br>
	 * Original signature : <code>SwsVector* sws_allocVec(int)</code>
	 */
	SwsVector sws_allocVec(int length);
	/**
	 * Return a normalized Gaussian curve used to filter stuff<br>
	 * quality = 3 is high quality, lower is lower quality.<br>
	 * Original signature : <code>SwsVector* sws_getGaussianVec(double, double)</code>
	 */
	SwsVector sws_getGaussianVec(double variance, double quality);
	/**
	 * Allocate and return a vector with length coefficients, all<br>
	 * with the same value c.<br>
	 * Original signature : <code>SwsVector* sws_getConstVec(double, int)</code>
	 */
	SwsVector sws_getConstVec(double c, int length);
	/**
	 * Allocate and return a vector with just one coefficient, with<br>
	 * value 1.0.<br>
	 * Original signature : <code>SwsVector* sws_getIdentityVec()</code>
	 */
	SwsVector sws_getIdentityVec();
	/**
	 * Scale all the coefficients of a by the scalar value.<br>
	 * Original signature : <code>void sws_scaleVec(SwsVector*, double)</code>
	 */
	void sws_scaleVec(SwsVector a, double scalar);
	/**
	 * Scale all the coefficients of a so that their sum equals height.<br>
	 * Original signature : <code>void sws_normalizeVec(SwsVector*, double)</code>
	 */
	void sws_normalizeVec(SwsVector a, double height);
	/** Original signature : <code>void sws_convVec(SwsVector*, SwsVector*)</code> */
	void sws_convVec(SwsVector a, SwsVector b);
	/** Original signature : <code>void sws_addVec(SwsVector*, SwsVector*)</code> */
	void sws_addVec(SwsVector a, SwsVector b);
	/** Original signature : <code>void sws_subVec(SwsVector*, SwsVector*)</code> */
	void sws_subVec(SwsVector a, SwsVector b);
	/** Original signature : <code>void sws_shiftVec(SwsVector*, int)</code> */
	void sws_shiftVec(SwsVector a, int shift);
	/**
	 * Allocate and return a clone of the vector a, that is a vector<br>
	 * with the same coefficients as a.<br>
	 * Original signature : <code>SwsVector* sws_cloneVec(SwsVector*)</code>
	 */
	SwsVector sws_cloneVec(SwsVector a);
	/**
	 * Print with av_log() a textual representation of the vector a<br>
	 * if log_level <= av_log_level.<br>
	 * Original signature : <code>void sws_printVec2(SwsVector*, AVClass*, int)</code>
	 */
	void sws_printVec2(SwsVector a, AVClass log_ctx, int log_level);
	/** Original signature : <code>void sws_freeVec(SwsVector*)</code> */
	void sws_freeVec(SwsVector a);
	/** Original signature : <code>SwsFilter* sws_getDefaultFilter(float, float, float, float, float, float, int)</code> */
	SwsFilter sws_getDefaultFilter(float lumaGBlur, float chromaGBlur, float lumaSharpen, float chromaSharpen, float chromaHShift, float chromaVShift, int verbose);
	/** Original signature : <code>void sws_freeFilter(SwsFilter*)</code> */
	void sws_freeFilter(SwsFilter filter);
	/**
	 * Check if context can be reused, otherwise reallocate a new one.<br>
	 * * If context is NULL, just calls sws_getContext() to get a new<br>
	 * context. Otherwise, checks if the parameters are the ones already<br>
	 * saved in context. If that is the case, returns the current<br>
	 * context. Otherwise, frees context and gets a new context with<br>
	 * the new parameters.<br>
	 * * Be warned that srcFilter and dstFilter are not checked, they<br>
	 * are assumed to remain the same.<br>
	 * Original signature : <code>SwsContext* sws_getCachedContext(SwsContext*, int, int, AVPixelFormat, int, int, AVPixelFormat, int, SwsFilter*, SwsFilter*, const double*)</code><br>
	 * @deprecated use the safer methods {@link #sws_getCachedContext(org.javaavc.gen.swscale.LibswscaleLibrary.SwsContext, int, int, int, int, int, int, int, org.javaavc.gen.swscale.SwsFilter, org.javaavc.gen.swscale.SwsFilter, java.nio.DoubleBuffer)} and {@link #sws_getCachedContext(org.javaavc.gen.swscale.LibswscaleLibrary.SwsContext, int, int, int, int, int, int, int, org.javaavc.gen.swscale.SwsFilter, org.javaavc.gen.swscale.SwsFilter, com.sun.jna.ptr.DoubleByReference)} instead
	 */
	@Deprecated 
	LibswscaleLibrary.SwsContext sws_getCachedContext(LibswscaleLibrary.SwsContext context, int srcW, int srcH, int srcFormat, int dstW, int dstH, int dstFormat, int flags, SwsFilter srcFilter, SwsFilter dstFilter, DoubleByReference param);
	/**
	 * Check if context can be reused, otherwise reallocate a new one.<br>
	 * * If context is NULL, just calls sws_getContext() to get a new<br>
	 * context. Otherwise, checks if the parameters are the ones already<br>
	 * saved in context. If that is the case, returns the current<br>
	 * context. Otherwise, frees context and gets a new context with<br>
	 * the new parameters.<br>
	 * * Be warned that srcFilter and dstFilter are not checked, they<br>
	 * are assumed to remain the same.<br>
	 * Original signature : <code>SwsContext* sws_getCachedContext(SwsContext*, int, int, AVPixelFormat, int, int, AVPixelFormat, int, SwsFilter*, SwsFilter*, const double*)</code>
	 */
	LibswscaleLibrary.SwsContext sws_getCachedContext(LibswscaleLibrary.SwsContext context, int srcW, int srcH, int srcFormat, int dstW, int dstH, int dstFormat, int flags, SwsFilter srcFilter, SwsFilter dstFilter, DoubleBuffer param);
	/**
	 * Convert an 8-bit paletted frame into a frame with a color depth of 32 bits.<br>
	 * * The output frame will have the same packed format as the palette.<br>
	 * * @param src        source frame buffer<br>
	 * @param dst        destination frame buffer<br>
	 * @param num_pixels number of pixels to convert<br>
	 * @param palette    array with [256] entries, which must match color arrangement (RGB or BGR) of src<br>
	 * Original signature : <code>void sws_convertPalette8ToPacked32(const uint8_t*, uint8_t*, int, const uint8_t*)</code><br>
	 * @deprecated use the safer methods {@link #sws_convertPalette8ToPacked32(java.nio.ByteBuffer, java.nio.ByteBuffer, int, java.nio.ByteBuffer)} and {@link #sws_convertPalette8ToPacked32(com.sun.jna.Pointer, com.sun.jna.Pointer, int, com.sun.jna.Pointer)} instead
	 */
	@Deprecated 
	void sws_convertPalette8ToPacked32(Pointer src, Pointer dst, int num_pixels, Pointer palette);
	/**
	 * Convert an 8-bit paletted frame into a frame with a color depth of 32 bits.<br>
	 * * The output frame will have the same packed format as the palette.<br>
	 * * @param src        source frame buffer<br>
	 * @param dst        destination frame buffer<br>
	 * @param num_pixels number of pixels to convert<br>
	 * @param palette    array with [256] entries, which must match color arrangement (RGB or BGR) of src<br>
	 * Original signature : <code>void sws_convertPalette8ToPacked32(const uint8_t*, uint8_t*, int, const uint8_t*)</code>
	 */
	void sws_convertPalette8ToPacked32(ByteBuffer src, ByteBuffer dst, int num_pixels, ByteBuffer palette);
	/**
	 * Convert an 8-bit paletted frame into a frame with a color depth of 24 bits.<br>
	 * * With the palette format "ABCD", the destination frame ends up with the format "ABC".<br>
	 * * @param src        source frame buffer<br>
	 * @param dst        destination frame buffer<br>
	 * @param num_pixels number of pixels to convert<br>
	 * @param palette    array with [256] entries, which must match color arrangement (RGB or BGR) of src<br>
	 * Original signature : <code>void sws_convertPalette8ToPacked24(const uint8_t*, uint8_t*, int, const uint8_t*)</code><br>
	 * @deprecated use the safer methods {@link #sws_convertPalette8ToPacked24(java.nio.ByteBuffer, java.nio.ByteBuffer, int, java.nio.ByteBuffer)} and {@link #sws_convertPalette8ToPacked24(com.sun.jna.Pointer, com.sun.jna.Pointer, int, com.sun.jna.Pointer)} instead
	 */
	@Deprecated 
	void sws_convertPalette8ToPacked24(Pointer src, Pointer dst, int num_pixels, Pointer palette);
